<resources>
    <string name="app_name">ToolCoin</string>
    <string name="ready">Calcule seus lucros</string>
    <string name="Text_chooseOptions">Escolha entre as opções abaixo</string>
    <string name="buttonProjection_Main">PROJETAR</string>
    <string name="buttonText_APR">APR</string>
    <string name="buttonText_price">Cotação</string>
    <string name="text_dev_JairoLopes">Desenvolvido por: Jairo Lopes</string>
    <string name="TitleHeader_Projection">PROJEÇÃO</string>
    <string name="text_price">Cotação de quando comprou</string>
    <string name="money">$ 00.00</string>
    <string name="investimentValue">Valor do investimento</string>
    <string name="projectionValue">Valor da projeção</string>
    <string name="clear">LIMPAR</string>
    <string name="projection">Projetar</string>
    <string name="percentValue">Percentual de aumento</string>
    <string name="supplyBuy">Unidades compradas</string>
    <string name="profit">Lucro</string>
    <string name="patrimony">Patrimônio</string>
    <string name="initPercent">00.00%</string>
    <string name="unitsZero">00.00</string>
    <string name="TitleaprCalculator">Calculadora APR</string>
    <string name="investmentValue">Valor investido</string>
    <string name="aprInfo">Informe a APR</string>
    <string name="clean">LIMPAR</string>
    <string name="calculate">CALCULAR</string>
    <string name="rewardsDay">Por dia</string>
    <string name="valueZero">00.00</string>
    <string name="weekRewards">Por semana</string>
    <string name="monthValue">Por mês</string>
    <string name="yeaRewards">Por ano</string>
    <string name="Price">Calculadora de cotação</string>
    <string name="InvestmentValue">Valor Investido</string>
    <string name="buyCoinSupply">Quantidade de moedas compradas</string>
    <string name="PriceInTheMoment">Cotação no momento da compra</string>
    <string name="waitValue">- - -</string>
    <string name="popupAlert">Preencha todos os campos!</string>
    <string name="toolcoin">ToolCoin</string>
</resources>