<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:background="@drawable/bg"
    >

    <TextView
        android:id="@+id/textHeadMAIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:textSize="35sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        />
    <TextView
        android:id="@+id/textChoiceMAIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textHeadMAIN"
        android:textColor="@color/white"
        android:text="@string/Text_chooseOptions"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textHeadMAIN"
        app:layout_constraintEnd_toEndOf="@+id/textHeadMAIN"
        android:layout_marginTop="18dp"
        />
    <Button
        android:id="@+id/buttonProjectionMAIN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textChoiceMAIN"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonAprsMAIN"
        android:layout_marginEnd="7dp"
        android:backgroundTint="@color/greyHard"
        android:text="@string/buttonProjection_Main"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/buttonAprsMAIN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/buttonProjectionMAIN"
        app:layout_constraintTop_toTopOf="@+id/buttonProjectionMAIN"
        app:layout_constraintBottom_toBottomOf="@id/buttonProjectionMAIN"
        app:layout_constraintEnd_toEndOf="@+id/buttonPriceMAIN"
        android:backgroundTint="@color/greyHard"
        android:textColor="@color/white"
        android:text="@string/buttonText_APR"
        />
    <Button
        android:id="@+id/buttonPriceMAIN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonText_price"
        app:layout_constraintStart_toEndOf="@id/buttonAprsMAIN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/buttonAprsMAIN"
        app:layout_constraintTop_toTopOf="@+id/buttonAprsMAIN"
        android:layout_marginStart="7dp"
        android:backgroundTint="@color/greyHard"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dev_JairoLopes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/greyHard"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>