<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AprActicity"
    android:background="@color/blueHard"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/textHeadAPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TitleaprCalculator"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <View
        android:id="@+id/viewOneAPR"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textHeadAPR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/editInvestmentAPR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:padding="6dp"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/money"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/investimentValue"
        app:layout_constraintBottom_toTopOf="@id/editInvestmentAPR"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/editInvestmentAPR"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/textAprAPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editInvestmentAPR"
        app:layout_constraintStart_toStartOf="@id/editInvestmentAPR"
        android:text="@string/aprInfo"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="28dp"
        />

    <EditText
        android:id="@+id/editAprAPR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAprAPR"
        android:padding="6dp"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:hint="00"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/buttonClearAPR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editAprAPR"
        app:layout_constraintStart_toStartOf="@id/editAprAPR"
        app:layout_constraintEnd_toStartOf="@id/buttonCalculateAPR"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:text="@string/clean"
        android:textColor="@color/blueHard"
        android:layout_marginTop="16dp"
        android:padding="3dp"
        />
    <Button
        android:id="@+id/buttonCalculateAPR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/buttonClearAPR"
        app:layout_constraintTop_toTopOf="@id/buttonClearAPR"
        app:layout_constraintStart_toEndOf="@id/buttonClearAPR"
        app:layout_constraintEnd_toEndOf="@id/editAprAPR"
        android:backgroundTint="@color/white"
        android:text="@string/calculate"
        android:textColor="@color/blueHard"
        android:padding="3dp"
        />
    <View
        android:id="@+id/viewTwoAPR"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/buttonClearAPR"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/buttonClearAPR"
        app:layout_constraintEnd_toEndOf="@id/buttonCalculateAPR"
        />
    <TextView
        android:id="@+id/textDayAPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewTwoAPR"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/viewTwoAPR"
        app:layout_constraintEnd_toStartOf="@id/textWeekAPR"
        android:text="@string/rewardsDay"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/textResultDayAPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textDayAPR"
        app:layout_constraintTop_toBottomOf="@id/textDayAPR"
        app:layout_constraintEnd_toEndOf="@id/textDayAPR"
        android:text="@string/valueZero"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/textWeekAPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/textDayAPR"
        app:layout_constraintStart_toEndOf="@id/textDayAPR"
        app:layout_constraintTop_toTopOf="@id/textDayAPR"
        app:layout_constraintEnd_toStartOf="@id/textMonthAPR"
        android:text="@string/weekRewards"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/textResultWeekAPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textWeekAPR"
        app:layout_constraintTop_toBottomOf="@id/textWeekAPR"
        app:layout_constraintEnd_toEndOf="@id/textWeekAPR"
        android:text="@string/valueZero"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/textMonthAPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/textWeekAPR"
        app:layout_constraintStart_toEndOf="@id/textWeekAPR"
        app:layout_constraintTop_toTopOf="@id/textWeekAPR"
        app:layout_constraintEnd_toEndOf="@id/viewTwoAPR"
        android:text="@string/monthValue"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/textResultMonthAPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textMonthAPR"
        app:layout_constraintTop_toBottomOf="@id/textMonthAPR"
        app:layout_constraintEnd_toEndOf="@id/textMonthAPR"
        android:text="@string/valueZero"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/textYearAPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textResultWeekAPR"
        app:layout_constraintStart_toStartOf="@id/textWeekAPR"
        app:layout_constraintEnd_toEndOf="@id/textWeekAPR"
        android:layout_marginTop="30dp"
        android:text="@string/yeaRewards"
        android:textColor="@color/white"
        android:textSize="22sp"
        />
    <TextView
        android:id="@+id/textResultYearAPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textYearAPR"
        app:layout_constraintTop_toBottomOf="@id/textYearAPR"
        app:layout_constraintEnd_toEndOf="@id/textYearAPR"
        android:text="@string/valueZero"
        android:textColor="@color/white"
        android:textSize="25sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>