<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectionActivity"
    android:background="@drawable/bg">

    <View
        android:id="@+id/viewHeaderPROJECTION"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="60dp"
        />

    <TextView
        android:id="@+id/textHeadPROJECTION"
        app:layout_constraintStart_toStartOf="@+id/viewHeaderPROJECTION"
        app:layout_constraintEnd_toEndOf="@+id/viewHeaderPROJECTION"
        app:layout_constraintTop_toTopOf="@+id/viewHeaderPROJECTION"
        app:layout_constraintBottom_toBottomOf="@+id/viewHeaderPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TitleHeader_Projection"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textCotacaoPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderPROJECTION"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_price"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        />
    <EditText
        android:id="@+id/editPricePROJECTION"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textCotacaoPROJECTION"
        app:layout_constraintStart_toStartOf="@+id/textCotacaoPROJECTION"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/money"
        android:inputType="numberDecimal"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        />
    <TextView
        android:id="@+id/textInvestmentPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editPricePROJECTION"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/investimentValue"
        android:textSize="17sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        />
    <EditText
        android:id="@+id/editInvestmentPROJECTION"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInvestmentPROJECTION"
        app:layout_constraintStart_toStartOf="@+id/textInvestmentPROJECTION"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:hint="@string/money"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/textProjectionPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editInvestmentPROJECTION"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/projectionValue"
        android:textSize="17sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        />
    <EditText
        android:id="@+id/editProjectionPROJECTION"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textProjectionPROJECTION"
        app:layout_constraintStart_toStartOf="@+id/textInvestmentPROJECTION"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:hint="@string/money"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonClearPROJECTION"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@id/buttonProjectionPROJECTION"
        app:layout_constraintTop_toTopOf="@id/buttonProjectionPROJECTION"
        app:layout_constraintBottom_toBottomOf="@id/buttonProjectionPROJECTION"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg2"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonProjectionPROJECTION"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editProjectionPROJECTION"
        app:layout_constraintStart_toEndOf="@+id/buttonClearPROJECTION"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/projection"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg2"
        android:textColor="@color/white"

        />
    <View
        android:id="@+id/viewCabecalho"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonProjectionPROJECTION"
        app:layout_constraintStart_toStartOf="@+id/buttonClearPROJECTION"
        app:layout_constraintEnd_toEndOf="@id/buttonProjectionPROJECTION"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        />
    <TextView
        android:id="@+id/textPercentPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewCabecalho"
        android:text="@string/percentValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        />
    <View
        android:id="@+id/viewDivisor1PROJECTION"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/textPercentPROJECTION"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/grey"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:id="@+id/textResultPercentPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewDivisor1PROJECTION"
        android:text="@string/initPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/textSupplyPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textResultPercentPROJECTION"
        android:text="@string/supplyBuy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        />
    <View
        android:id="@+id/viewDivisor2PROJECTION"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/textSupplyPROJECTION"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/grey"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:id="@+id/textResultSupplyPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewDivisor2PROJECTION"
        android:text="@string/unitsZero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/textProfitPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textResultSupplyPROJECTION"
        android:text="@string/profit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        />
    <View
        android:id="@+id/viewDivisor3PROJECTION"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/textProfitPROJECTION"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/grey"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:id="@+id/textResultProfitPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewDivisor3PROJECTION"
        android:text="@string/money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/textPatrimonyPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textResultProfitPROJECTION"
        android:text="@string/patrimony"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        />
    <View
        android:id="@+id/viewDivisor4PROJECTION"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/textPatrimonyPROJECTION"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/grey"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
    <TextView
        android:id="@+id/textResultPatrimonyPROJECTION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewDivisor4PROJECTION"
        android:text="@string/money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
</androidx.constraintlayout.widget.ConstraintLayout>