<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PriceActivity"
    android:background="@drawable/bg"
    android:padding="10dp"
    >
    <View
        android:id="@+id/viewCabecalhoCotacao"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textHeadPRICE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Price"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="@id/viewCabecalhoCotacao"
        app:layout_constraintEnd_toEndOf="@id/viewCabecalhoCotacao"
        app:layout_constraintTop_toTopOf="@id/viewCabecalhoCotacao"
        app:layout_constraintBottom_toBottomOf="@id/viewCabecalhoCotacao"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/textHeadPRICE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        />
    <View
        android:id="@+id/viewMenuPRICE"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/viewCabecalhoCotacao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/textInvestValuePRICE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/InvestmentValue"
        app:layout_constraintTop_toTopOf="@id/viewMenuPRICE"
        app:layout_constraintStart_toStartOf="@id/viewMenuPRICE"
        app:layout_constraintEnd_toEndOf="@id/viewMenuPRICE"
        android:gravity="start"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        />
    <EditText
        android:id="@+id/editInvestValuePRICE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInvestValuePRICE"
        app:layout_constraintStart_toStartOf="@id/textInvestValuePRICE"
        app:layout_constraintEnd_toEndOf="@id/viewMenuPRICE"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/white"
        />
    <TextView
        android:id="@+id/textSupplyPRICE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/buyCoinSupply"
        app:layout_constraintStart_toStartOf="@id/textInvestValuePRICE"
        app:layout_constraintEnd_toEndOf="@id/viewMenuPRICE"
        app:layout_constraintTop_toBottomOf="@id/editInvestValuePRICE"
        android:gravity="start"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        />
    <EditText
        android:id="@+id/editSupplyPRICE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textSupplyPRICE"
        app:layout_constraintStart_toStartOf="@id/textInvestValuePRICE"
        app:layout_constraintEnd_toEndOf="@id/viewMenuPRICE"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/white"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCalculatePRICE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/editSupplyPRICE"
        app:layout_constraintStart_toStartOf="@id/viewMenuPRICE"
        app:layout_constraintEnd_toEndOf="@id/viewMenuPRICE"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg2"
        android:inputType="numberDecimal"
        tools:ignore="TextViewEdits" />
    <TextView
        android:id="@+id/textPricePRICE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PriceInTheMoment"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/viewMenuPRICE"
        app:layout_constraintStart_toStartOf="@id/viewMenuPRICE"
        app:layout_constraintEnd_toEndOf="@id/viewMenuPRICE"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/textResultPRICE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waitValue"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/textPricePRICE"
        app:layout_constraintStart_toStartOf="@id/textPricePRICE"
        app:layout_constraintEnd_toEndOf="@id/textPricePRICE"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textStyle="bold|italic"
        />

</androidx.constraintlayout.widget.ConstraintLayout>